--- a/paganini.html
+++ b/paganini.html
@@ -18,13 +18,19 @@
         <article>
             <p>上一章</p>
 
+<div style="text-align: center;">周六健身房跑完步，我一般骑车经过332国道去Paganini午餐，路上会经过漂亮的稻田，初夏插秧。话说我如何发现Paganini呢？刚来一个月，我在网上找到那里有个亚超，附近找了半天没找着，当时很累，看到这个咖啡店，之后一发不可收拾。每周都来，这家店令我有德国Dijon Cafe Bistro感觉（当时我每周六跑完步都去这）。这是个小店，只有两个蛋糕师傅，老奶奶爷爷（店主爸妈）也在帮忙。我带着kindle来消磨一小时。这里一个蛋糕饮料套餐700日元（可能地点有点偏，比西条一般便宜）。税涨前配两片饼干，后来只有一片了。这里装修，食品到餐具都是非常精美的。</div>
+
+<div style="text-align: center;">我刚来的时候周六先去apsaras午餐，然后这里下午茶。后来apsaras我晚饭去，就直接来这午餐了。</div>
+
+
+
 <div class="picture-container">
-    <img src="paganini/.JPG" class="picture">
+    <img src="paganini/9.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
 
 <div class="picture-container">
-    <img src="paganini/9.JPG" class="picture">
+    <img src="paganini/78.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
 
@@ -49,19 +55,14 @@
 <div style="text-align: center;"></div>
 
 <div class="picture-container">
-    <img src="paganini/78.JPG" class="picture">
+    <img src="paganini/12.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="paganini/79.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">路上经过的医院</div>
 
 <div class="picture-container">
     <img src="paganini/46.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">进入寺家，很多带院子的小别墅，种了不同的农作物。</div>
 
 
 <div class="picture-container">
@@ -69,22 +70,6 @@
 </div>
 <div style="text-align: center;"></div>
 
-<div class="picture-container">
-    <img src="paganini/12.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-
-<div class="picture-container">
-    <img src="paganini/7.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-
-<div class="picture-container">
-    <img src="paganini/30.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
 
 <div class="picture-container">
     <img src="paganini/71.JPG" class="picture">
@@ -93,29 +78,40 @@
 
 
 <div class="picture-container">
+    <img src="paganini/7.JPG" class="picture">
+</div>
+<div style="text-align: center;">过了这条马路，之走一两百米转右约100米，左手面就是了。</div>
+
+
+<div class="picture-container">
+    <img src="paganini/30.JPG" class="picture">
+</div>
+<div style="text-align: center;">去之前经过王巍姐家里。那年我种菜，看见她加门口野种，好奇拍照，她看见我和我聊，还给我送菜。她做保险，后来我在她那买车保险了。照片里挂在门口的袋子是我走的时候送给她的礼物，她很惊喜。她很客气，每次去她家都请我吃东西。</div>
+
+<div class="picture-container">
     <img src="paganini/58.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">王姐家的番茄。</div>
 
 <div class="picture-container">
     <img src="paganini/23.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">到了！</div>
 
 <div class="picture-container">
     <img src="paganini/21.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">我的自行车。下雨就开车。</div>
 
 <div class="picture-container">
     <img src="paganini/83.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">门口牌子写了生日的小朋友们。</div>
 
 <div class="picture-container">
     <img src="paganini/31.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">我们看看这里的蛋糕。</div>
 
 <div class="picture-container">
     <img src="paganini/32.JPG" class="picture">
@@ -130,27 +126,27 @@
 <div class="picture-container">
     <img src="paganini/35.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">这里很多不同口味的芝士蛋糕。</div>
 
 <div class="picture-container">
     <img src="paganini/36.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">这里的曲奇饼。</div>
 
 <div class="picture-container">
     <img src="paganini/65.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="paganini/61.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">情人节礼盒。</div>
 
 <div class="picture-container">
     <img src="paganini/44.JPG" class="picture">
 </div>
-<div style="text-align: center;">我通常就是坐花花坐的桌子。</div>
+<div style="text-align: center;">这里不大，两张2人桌，一张4人桌，我通常就是坐花花坐的桌子。</div>
+
+<div class="picture-container">
+    <img src="paganini/61.JPG" class="picture">
+</div>
+<div style="text-align: center;">这里以龙猫为主题。</div>
 
 <div class="picture-container">
     <img src="paganini/45.JPG" class="picture">
@@ -170,13 +166,30 @@
 <div class="picture-container">
     <img src="paganini/48.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">这里厕所特别干净</div>
 
 <div class="picture-container">
     <img src="paganini/49.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
 
+
+<div class="picture-container">
+    <img src="paganini/24.JPG" class="picture">
+</div>
+<div style="text-align: center;">这是冈崎先生。店长是榊先生。店里只有他们两位蛋糕师，有客人来冈崎先生就出来招待。每次吃完离开他都会从里面和我再见。每次客人来，他从里面出来时，都不会盯着客人望，眼看四方，不会给客人压力。</div>
+
+<div class="picture-container">
+    <img src="paganini/54.JPG" class="picture">
+</div>
+<div style="text-align: center;">预定蛋糕的小朋友都给拍照。我其实每次看到都希望自己生日能有这个蛋糕，像那些小朋友那样拍照。</div>
+<br>
+
+<div style="text-align: center;">我在这里有很多一个人愉快的时光，也有和朋友一起的。</div>
+<div class="picture-container">
+    <img src="paganini/27.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
 
 <div class="picture-container">
     <img src="paganini/5.JPG" class="picture">
@@ -204,54 +217,60 @@
 <div class="picture-container">
     <img src="paganini/63.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">这是某年生日拍的。蜡烛原来买给老妈，那年疫情（2020）没有回去，就自己用吧。</div>
 
 
 <div class="picture-container">
     <img src="paganini/28.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">最常和花花一起来。</div>
+
+<div class="picture-container">
+    <img src="paganini/8.JPG" class="picture">
+</div>
+<div style="text-align: center;">冬天窗外雪景</div>
 
 
 <div class="picture-container">
     <img src="paganini/15.JPG" class="picture">
 </div>
-<div style="text-align: center;">我要开始看书了，不过我会先给你们介绍这里漂亮又好吃的蛋糕。</div>
+<div style="text-align: center;">我要开始看书了，不过我会先给你们介绍这里漂亮又好吃的蛋糕。我夏天都喝冰咖啡アイスコーヒー。</div>
 
 <div class="picture-container">
     <img src="paganini/90.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">隆重登场！第一次出场的是我最爱的いちごミルク（草莓牛奶，注意这个是两片饼干，我很早期拍的），酸甜味的。这里每款蛋糕的特色都是很有层次。</div>
 
 <div class="picture-container">
     <img src="paganini/92.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">来个近镜。这次配的巧克力，不是饼干。</div>
 
 <div class="picture-container">
     <img src="paganini/93.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">いちごミルク（草莓牛奶）内心。</div>
 
-<div class="picture-container">
-    <img src="paganini/25.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
 
 <div class="picture-container">
     <img src="paganini/10.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">我第二喜欢的宇治，里面有柚子的（柚子照片能看到），带一点苦味。冬天我喜欢喝红茶，可以续杯的。他家同时给柠檬和牛奶。</div>
+
+<div class="picture-container">
+    <img src="paganini/98.JPG" class="picture">
+</div>
+<div style="text-align: center;">宇治里面</div>
 
 <div class="picture-container">
     <img src="paganini/14.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">这是我第三喜欢，忘了名字，好像布丁的芒果蛋糕。</div>
 
 <div class="picture-container">
     <img src="paganini/38.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">这款巧克力脆脆也很好吃。</div>
 
 <div class="picture-container">
     <img src="paganini/75.JPG" class="picture">
@@ -269,7 +288,7 @@
 <div style="text-align: center;"></div>
 
 <div class="picture-container">
-    <img src="paganini/86.JPG" class="picture">
+    <img src="paganini/68.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
 
@@ -285,6 +304,31 @@
 
 <div class="picture-container">
     <img src="paganini/60.JPG" class="picture">
+</div>
+<div style="text-align: center;">板栗</div>
+
+<div class="picture-container">
+    <img src="paganini/95.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="paganini/72.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="paganini/2.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="paganini/3.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="paganini/4.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
 
@@ -321,8 +365,20 @@
 </div>
 <div style="text-align: center;"></div>
 
+
+<div class="picture-container">
+    <img src="paganini/91.JPG" class="picture">
+</div>
+<div style="text-align: center;">这里的餐具也是很漂亮的哦。</div>
+
+
 <div class="picture-container">
     <img src="paganini/34.JPG" class="picture">
+</div>
+<div style="text-align: center;">聚餐</div>
+
+<div class="picture-container">
+    <img src="paganini/84.JPG" class="picture">
 </div>
 <div style="text-align: center;">聚餐</div>
 
@@ -393,6 +449,22 @@
 <div style="text-align: center;"></div>
 
 <div class="picture-container">
+    <img src="paganini/41.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="paganini/42.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="paganini/43.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+
+<div class="picture-container">
     <img src="paganini/85.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
@@ -416,6 +488,8 @@
 <div class="picture-container">
     <img src="paganini/19.JPG" class="picture">
 <div style="text-align: center;"></div>
+
+回家路上，经过精肉店和cosmos买东西。
 
 <p>下一章</p>
 <br><br>
