--- a/paganini.html
+++ b/paganini.html
@@ -263,19 +263,9 @@
 <div style="text-align: center;">宇治里面</div>
 
 <div class="picture-container">
-    <img src="paganini/14.JPG" class="picture">
-</div>
-<div style="text-align: center;">这是我第三喜欢，忘了名字，好像布丁的芒果蛋糕。</div>
-
-<div class="picture-container">
-    <img src="paganini/38.JPG" class="picture">
-</div>
-<div style="text-align: center;">这款巧克力脆脆也很好吃。</div>
-
-<div class="picture-container">
     <img src="paganini/75.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">这是我第三喜欢，忘了名字，好像布丁的芒果蛋糕。</div>
 
 <div class="picture-container">
     <img src="paganini/40.JPG" class="picture">
@@ -283,87 +273,72 @@
 <div style="text-align: center;">芒果布丁蛋糕中间切开</div>
 
 <div class="picture-container">
-    <img src="paganini/1.JPG" class="picture">
+    <img src="paganini/38.JPG" class="picture">
+</div>
+<div style="text-align: center;">这款巧克力脆脆也很好吃。</div>
+
+<div class="picture-container">
+    <img src="paganini/14.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
+
+
+<div class="picture-container">
+    <img src="paganini/1.JPG" class="picture">
+</div>
+<div style="text-align: center;">这个外层很像班戟（pancake）</div>
 
 <div class="picture-container">
     <img src="paganini/68.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">这是橙子味道，酸甜的。</div>
 
-<div class="picture-container">
-    <img src="paganini/50.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
 
 <div class="picture-container">
     <img src="paganini/52.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">红薯</div>
+
+<div class="picture-container">
+    <img src="paganini/3.JPG" class="picture">
+</div>
+<div style="text-align: center;">板栗（这个没有完整照）</div>
 
 <div class="picture-container">
     <img src="paganini/60.JPG" class="picture">
-</div>
-<div style="text-align: center;">板栗</div>
-
-<div class="picture-container">
-    <img src="paganini/95.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
 
 <div class="picture-container">
     <img src="paganini/72.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">short cake</div>
 
 <div class="picture-container">
     <img src="paganini/2.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="paganini/3.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="paganini/4.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-
-<div class="picture-container">
-    <img src="paganini/29.JPG" class="picture">
-</div>
-<div style="text-align: center;">有年夏天把一块饼干换成小杯沙冰</div>
-
-<div class="picture-container">
-    <img src="paganini/88.JPG" class="picture">
-</div>
-<div style="text-align: center;">有年夏天把一块饼干换成小杯沙冰</div>
+<div style="text-align: center;">忘记这是啥了</div>
 
 <div class="picture-container">
     <img src="paganini/94.JPG" class="picture">
 </div>
-<div style="text-align: center;">有年夏天把一块饼干换成小杯沙冰</div>
+<div style="text-align: center;">有年夏天把一块饼干换成小杯冰沙，有两种口味</div>
+
+<div class="picture-container">
+    <img src="paganini/88.JPG" class="picture">
+</div>
+<div style="text-align: center;">另一种口味</div>
 
 
 <div class="picture-container">
     <img src="paganini/53.JPG" class="picture">
 </div>
-<div style="text-align: center;">之后一年加300遍了高档沙冰，有两款不同口味。</div>
+<div style="text-align: center;">之后一年加300日元遍了高档冰沙，也是有两款不同口味。</div>
 
 <div class="picture-container">
     <img src="paganini/55.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
-
-
-<div class="picture-container">
-    <img src="paganini/87.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">另一款口味。冰沙只做了两年夏天就没了。</div>
 
 
 <div class="picture-container">
@@ -375,7 +350,7 @@
 <div class="picture-container">
     <img src="paganini/34.JPG" class="picture">
 </div>
-<div style="text-align: center;">聚餐</div>
+<div style="text-align: center;">这个好地方我也带过朋友来，最经常是花花了。</div>
 
 <div class="picture-container">
     <img src="paganini/84.JPG" class="picture">
@@ -385,52 +360,28 @@
 <div class="picture-container">
     <img src="paganini/56.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">啊！这张是上面支离破碎的板栗的完整照！</div>
 
 <div class="picture-container">
     <img src="paganini/51.JPG" class="picture">
 </div>
-<div style="text-align: center;">三个人聚餐</div>
-
-<div class="picture-container">
-    <img src="paganini/.JPG" class="picture">
-</div>
 <div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="paganini/.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
-
-
-
-
 
 <div class="picture-container">
     <img src="paganini/59.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="paganini/27.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">和花花一起</div>
 
 <div class="picture-container">
     <img src="paganini/73.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">和我一见如故，相处不是很长时间的小源。离开了一直有联系。</div>
 
 
 <div class="picture-container">
     <img src="paganini/101.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
-
-<div class="picture-container">
-    <img src="paganini/102.JPG" class="picture">
-</div>
-<div style="text-align: center;"></div>
+<div style="text-align: center;">2019年靓靓快离开送她礼物，爱美的她我刻意买了最贵的和纸做纸盒。</div>
 
 <div class="picture-container">
     <img src="paganini/103.JPG" class="picture">
@@ -446,7 +397,10 @@
 <div class="picture-container">
     <img src="paganini/105.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+
+<br>
+
+<div style="text-align: center;">最后，上他们的外卖曲奇饼，有很多不同口味，我觉得花椒味很好，走的时候带了一盒回家。</div>
 
 <div class="picture-container">
     <img src="paganini/41.JPG" class="picture">
@@ -467,9 +421,8 @@
 <div class="picture-container">
     <img src="paganini/85.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
-
-
+<div style="text-align: center;">我要离开了，走之前给冈崎先生及榊広子奶奶送礼物。奶奶每次见到我都和我聊天，不过我日语不好听的不太懂。摄于2023年9月。</div>
+<div style="text-align: center;">每次吃完蛋糕，就经过下面的路回家了，还会去mosmos及精肉店买菜。2023年大概4月我家冰箱坏了，吃完蛋糕我就回家直接吃午晚饭了。</div>
 <div class="picture-container">
     <img src="paganini/80.JPG" class="picture">
 </div>
@@ -489,7 +442,6 @@
     <img src="paganini/19.JPG" class="picture">
 <div style="text-align: center;"></div>
 
-回家路上，经过精肉店和cosmos买东西。
 
 <p>下一章</p>
 <br><br>
