--- a/paganini.html
+++ b/paganini.html
@@ -52,7 +52,34 @@
 <div class="picture-container">
     <img src="paganini/70.JPG" class="picture">
 </div>
-<div style="text-align: center;"></div>
+<br><br>
+<div style="text-align: center;">来几个农田视频</div>
+
+
+   <video controls style="width: 40%; height: auto;">
+        <source src="paganini/IMG_2493.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+   <div style="text-align: center;"> </div>
+
+   <video controls style="width: 80%; height: auto;">
+        <source src="paganini/IMG_2494.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+   <div style="text-align: center;">上下是同一地方，不同季节。</div>
+
+   <video controls style="width: 80%; height: auto;">
+        <source src="paganini/IMG_4305.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+   <div style="text-align: center;"> </div>
+
+   <video controls style="width: 80%; height: auto;">
+        <source src="paganini/IMG_4311.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+   <div style="text-align: center;">332国道 </div>
+
 
 <div class="picture-container">
     <img src="paganini/12.JPG" class="picture">
@@ -422,6 +449,27 @@
     <img src="paganini/85.JPG" class="picture">
 </div>
 <div style="text-align: center;">我要离开了，走之前给冈崎先生及榊広子奶奶送礼物。奶奶每次见到我都和我聊天，不过我日语不好听的不太懂。摄于2023年9月。</div>
+
+<div style="text-align: center;">最后来几个视频。</div>
+
+  <video controls style="width: 40%; height: auto;">
+        <source src="paganini/IMG_5306.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+   <div style="text-align: center;"> </div>
+
+  <video controls style="width: 80%; height: auto;">
+        <source src="paganini/IMG_6989.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+   <div style="text-align: center;"> </div>
+
+  <video controls style="width: 40%; height: auto;">
+        <source src="paganini/IMG_6998.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+   <div style="text-align: center;"> </div>
+
 <div style="text-align: center;">每次吃完蛋糕，就经过下面的路回家了，还会去mosmos及精肉店买菜。2023年大概4月我家冰箱坏了，吃完蛋糕我就回家直接吃午晚饭了。</div>
 <div class="picture-container">
     <img src="paganini/80.JPG" class="picture">
