--- a/home_food.html
+++ b/home_food.html
@@ -202,7 +202,12 @@ div class="picture-container">
 <div class="picture-container">
     <img src="home/food/8.JPG" class="picture">
 </div>
-<div style="text-align: center;">也是在高屋free marketアンの時間的摊档买的杯子，也是名牌。</div>
+<div style="text-align: center;">也是在高屋free marketアンの時間的摊档买的杯子，也是名牌。这是抹茶。</div>
+
+<div class="picture-container">
+    <img src="home/food/coffee.JPG" class="picture">
+</div>
+<div style="text-align: center;">酸奶咖啡</div>
 
 <div class="picture-container">
     <img src="home/food/1.JPG" class="picture">
