--- a/home_plant.html
+++ b/home_plant.html
@@ -20,12 +20,16 @@
 
 <p>家里有阳台，有次朋友给了我一些泥土及种子，我就开始种植物来了。她给我的泥土有不同的种子，还有野种子，要种出来才知道是什么。我觉得好神奇呢。小小一粒的种子，种出来各种各样美妙的东西。有次出门，她摘了一些薄荷来，我后来自己又买了几款不同薄荷种起来呢。</p>
 
-
+<div class="picture-container">
+    <img src="home/plant/lvdou1.JPG" class="picture">
+</div>
+<div style="text-align: center;">绿豆苗</div>
 
 <div class="picture-container">
     <img src="home/plant/2.JPG" class="picture">
 </div>
 <div style="text-align: center;">第一个上来的当然是绿豆！我年代的幼儿园学生都种绿豆的，我很怀念。以前在香港也种过，每次都种到出豆。一粒小绿豆可以变成十几粒绿豆，真的很神奇。</div>
+
 
 <div class="picture-container">
     <img src="home/plant/5.JPG" class="picture">
