--- a/office_kanata.html
+++ b/office_kanata.html
@@ -18,6 +18,9 @@
         <article>
             <p>上一章</p>
 
+<div style="text-align: center;">这是一次迎新活动，参观东广岛天文台并进行饺子宴。忘记了那年了，可能2019吧，反正疫情前。那次饺子宴，植村老师负责揉面，学生负责做馅，洗碗川端老师负责。</div>
+
+
 <div class="picture-container">
     <img src="office/kanata/1.JPG" class="picture">
 </div>
@@ -71,7 +74,7 @@
 <div class="picture-container">
     <img src="office/kanata/8.JPG" class="picture">
 </div>
-<div style="text-align: center;">皮是植村老师揉的，馅学生做。多余的做了丸子。</div>
+<div style="text-align: center;">多余的馅做了丸子。</div>
 
 
 
@@ -85,7 +88,7 @@
 <div class="picture-container">
     <img src="office/kanata/10.JPG" class="picture">
 </div>
-<div style="text-align: center;">吃完还有冰淇淋。这碗川端老师一个人洗碗。</div>
+<div style="text-align: center;">吃完还有冰淇淋。</div>
 
 <div class="picture-container">
     <img src="office/kanata/13.JPG" class="picture">
