--- a/office_uni_matsuri.html
+++ b/office_uni_matsuri.html
@@ -59,9 +59,24 @@
 <div style="text-align: center;">吃的摊档</div>
 
 <div class="picture-container">
+    <img src="office/201911uni_fes/33.JPG" class="picture">
+</div>
+<div style="text-align: center;">晚上的会场</div>
+
+<div class="picture-container">
+    <img src="office/201911uni_fes/28.JPG" class="picture">
+</div>
+<div style="text-align: center;">我买了一些回办公室吃，等看烟火</div>
+
+<div class="picture-container">
     <img src="office/201911uni_fes/20.JPG" class="picture">
 </div>
 <div style="text-align: center;">会场一角</div>
+
+<div class="picture-container">
+    <img src="office/201911uni_fes/1.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
 
 <div class="picture-container">
     <img src="office/201911uni_fes/17.JPG" class="picture">
@@ -89,6 +104,21 @@
 <div style="text-align: center;">书法成品，不知道他们过后会放哪。</div>
 
 <div class="picture-container">
+    <img src="office/201911uni_fes/54.JPG" class="picture">
+</div>
+<div style="text-align: center;">书法当然也有静态的。</div>
+
+<div class="picture-container">
+    <img src="office/201911uni_fes/44.JPG" class="picture">
+</div>
+<div style="text-align: center;">带着孩子来也没问题，有婴儿室。</div>
+
+<div class="picture-container">
+    <img src="office/201911uni_fes/7.JPG" class="picture">
+</div>
+<div style="text-align: center;">忘了什么社团</div>
+
+<div class="picture-container">
     <img src="office/201911uni_fes/12.JPG" class="picture">
 </div>
 <div style="text-align: center;">战史研展示会</div>
@@ -107,6 +137,37 @@
     <img src="office/201911uni_fes/11.JPG" class="picture">
 </div>
 <div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="office/201911uni_fes/8.JPG" class="picture">
+</div>
+<div style="text-align: center;">小提琴表演</div>
+
+
+<div class="picture-container">
+    <img src="office/201911uni_fes/53.JPG" class="picture">
+</div>
+<div style="text-align: center;">管弦乐器</div>
+
+    <video controls style="width: 60%; height: auto;">
+      <source src="office/201911uni_fes/9.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <div style="text-align: center;">管弦乐器。 </div>
+    
+
+<div class="picture-container">
+    <img src="office/201911uni_fes/55.JPG" class="picture">
+</div>
+<div style="text-align: center;">准备邦乐</div>
+
+    <video controls style="width: 60%; height: auto;">
+      <source src="office/201911uni_fes/1.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <div style="text-align: center;">邦乐。 </div>
+
+     <div style="text-align: left;">音乐类社团还有吹奏乐器，唱歌还有好几类的。 </div>
 
 <div class="picture-container">
     <img src="office/201911uni_fes/42.JPG" class="picture">
@@ -155,9 +216,47 @@
 <div style="text-align: center;"></div>
 
 <div class="picture-container">
+    <img src="office/201911uni_fes/56.JPG" class="picture">
+</div>
+<div style="text-align: center;">跑题一下，这是互助卫生巾</div>
+
+<div class="picture-container">
     <img src="office/201911uni_fes/31.JPG" class="picture">
 </div>
 <div style="text-align: center;">劲舞表演</div>
+
+    <video controls style="width: 60%; height: auto;">
+      <source src="office/201911uni_fes/2.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <div style="text-align: center;">打band </div>
+
+        <video controls style="width: 60%; height: auto;">
+      <source src="office/201911uni_fes/3.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+	<div style="text-align: center;">也是户外音乐表演 </div>
+
+        <video controls style="width: 60%; height: auto;">
+      <source src="office/201911uni_fes/4.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+	<div style="text-align: center;">唱歌表演 </div>
+
+        <video controls style="width: 60%; height: auto;">
+      <source src="office/201911uni_fes/5.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+	<div style="text-align: center;">唱歌表演 </div>
+
+
+	
+<div class="picture-container">
+    <img src="office/201911uni_fes/57.JPG" class="picture">
+</div>
+<div style="text-align: center;">户外表演的观众</div>
+
+
 
 <div class="picture-container">
     <img src="office/201911uni_fes/37.JPG" class="picture">
@@ -167,12 +266,31 @@
 <div class="picture-container">
     <img src="office/201911uni_fes/38.JPG" class="picture">
 </div>
-<div style="text-align: center;">（烟火）</div>
+<div style="text-align: center;"></div>
 
 <div class="picture-container">
     <img src="office/201911uni_fes/39.JPG" class="picture">
 </div>
-<div style="text-align: center;">（烟火）</div>
+<div style="text-align: center;"></div>
+
+        <video controls style="width: 60%; height: auto;">
+      <source src="office/201911uni_fes/6.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+	<div style="text-align: center;">烟火及现场观众 </div>
+
+	        <video controls style="width: 60%; height: auto;">
+      <source src="office/201911uni_fes/7.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+	<div style="text-align: center;">烟火 </div>
+
+        <video controls style="width: 60%; height: auto;">
+      <source src="office/201911uni_fes/8.MOV" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+	<div style="text-align: center;">烟火</div>
+
 
 <div class="picture-container">
     <img src="office/201911uni_fes/47.JPG" class="picture">
@@ -180,9 +298,19 @@
 <div style="text-align: center;">各种社团招聘广告，这是魔术</div>
 
 <div class="picture-container">
+    <img src="office/201911uni_fes/51.JPG" class="picture">
+</div>
+<div style="text-align: center;">LEGO社团招聘广告，真想看他们的作品。</div>
+
+<div class="picture-container">
+    <img src="office/201911uni_fes/52.JPG" class="picture">
+</div>
+<div style="text-align: center;">马术社团。</div>
+
+<div class="picture-container">
     <img src="office/201911uni_fes/48.JPG" class="picture">
 </div>
-<div style="text-align: center;">邦乐社团，类似中乐的</div>
+<div style="text-align: center;">邦乐社团</div>
 
 <div class="picture-container">
     <img src="office/201911uni_fes/49.JPG" class="picture">
