--- a/office_room.html
+++ b/office_room.html
@@ -79,12 +79,16 @@
     </div>
 <div style="text-align: center;">我的台灯。</div>
 
-c<div class="picture-container">
+<div class="picture-container">
     <img src="office/room/46.JPG" class="picture">
 </div>
 <div style="text-align: center;">我的工资条</div>
 
-            
+<div class="picture-container">
+    <img src="office/room/47.JPG" class="picture">
+</div>
+<div style="text-align: center;">学校打的疫苗</div>
+
 <div class="picture-container">
     <img src="office/room/21.JPG" class="picture">
 </div>
@@ -171,9 +175,15 @@ c<div class="picture-container">
 <div style="text-align: center;"> 话说每年年底都有大扫除，同一天晚上去庆祝。这是大扫除用的机器。</div>
 
 <div class="picture-container">
-    <img src="office/room/14.JPG" class="picture">
+    <img src="office/room/41.JPG" class="picture">
 </div>
-<div style="text-align: center;">我的办公室。空调位置是我的。</div>
+<div style="text-align: center;"> 打扫完后干净很多，原来地板是黑的。</div>
+
+
+<div class="picture-container">
+    <img src="office/room/54.JPG" class="picture">
+</div>
+<div style="text-align: center;">我的办公室。空调位置是我的。我的Hello Kitty粉红色购物袋，最后用坏了。</div>
 
 <div class="picture-container">
     <img src="office/room/52.JPG" class="picture">
@@ -210,10 +220,43 @@ c<div class="picture-container">
 </div>
 <div style="text-align: center;"></div>
 
+<div style="text-align: center;">现在看看一些办公室视频。</div>
+
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/ExWCVdnZlfA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/B6HbeB2AetU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div style="text-align: center;">从理B到办公室。</div>
+
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/fLt5CF5TBy0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div style="text-align: center;">我的办公室</div>
+
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/ULMLZYTvRGs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div style="text-align: center;">我的办公室</div>
+
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/4qhZhwMFhx4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div style="text-align: center;">回去第一件事就是泡茶。</div>
+
+<div style="text-align: center;">
+    <iframe width="60%" height="315" src="https://youtube.com/embed/oY67_OlgNnQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div style="text-align: center;">楼道</div>
 
 <div class="picture-container">
     <img src="office/room/5.JPG" class="picture">
 </div>
+
+
 <div style="text-align: center;">疫情前有时候去食堂吃饭。米饭分开大中小，有规定重量，日本人真的会称。这点日本人的认真精神很欣赏。</div>
 
 <div class="picture-container">
@@ -287,12 +330,22 @@ c<div class="picture-container">
 <div style="text-align: center;"></div>
 
 
+<div class="picture-container">
+    <img src="office/room/32.JPG" class="picture">
+</div>
+<div style="text-align: center;">这是学校的harassment center。我走之前投诉了一个人。我在工作期间，完全不知道我可以用这个harassment center，所以他们不能给予援助，我投诉后他们改变了。学校的harassment center是给予员工及学生各种投诉，投诉流程，如何处理都有网站都有明确显示。他们的办公室在一个隐秘的角落，你在大厅拐弯进入一条小道才能到，你不会容易被人发现的。新生进来就会给予介绍这个harassment center，让他们知道遇到性骚扰，导师言语暴力时如何处理。</div>
 
-<video controls style="width: 60%; height: auto;">
-    <source src="apsaras/bonebroth.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-</video>
-<div style="text-align: center;">VIP限定的骨汤。 </div>
+
+<div class="picture-container">
+    <img src="office/room/33.JPG" class="picture">
+</div>
+<div style="text-align: center;">他们的册子，网上能下载的。</div>
+
+
+<div class="picture-container">
+    <img src="office/room/38.JPG" class="picture">
+</div>
+
 <p>下一章</p>
 <br><br>
 
