--- a/around_home.html
+++ b/around_home.html
@@ -55,16 +55,16 @@
 
 
 <div class="picture-container">
-    <img src="around_home/0.JPG" class="picture">
+    <img src="saijo/201904saijo_sakura/1.JPG" class="picture">
 </div>
 <div style="text-align: center;">对面的图书馆樱花季时，这是ブールバール西侧，我家是东侧，有天桥连接。那栋白色大厦是我刚来不久盖好的，是这里的高档公寓。开二号线离远就见到。</div>
+
+<div class="picture-container">
+    <img src="around_home/0.JPG" class="picture">
+</div>
 <div class="picture-container">
     <img src="around_home/1.JPG" class="picture">
 </div>
-<div class="picture-container">
-    <img src="around_home/23.JPG" class="picture">
-</div>
-<div style="text-align: center;">挨着图书馆的古坟ミツ城古墳。一会儿带你们看夜景。（我都忘了为啥我雪天回来这里，可能是我刻意来拍雪景的。）</div>
 
 
 <div class="picture-container">
@@ -76,15 +76,70 @@
     <img src="around_home/6.JPG" class="picture">
 </div>
 <div style="text-align: center;">附近驾校的樱花季，我在这里学车。</div>
+
+<div class="picture-container">
+    <img src="saijo/201904saijo_sakura/2.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="saijo/201904saijo_sakura/3.JPG" class="picture">
+</div>
+<div style="text-align: center;"></div>
+
+
+<div style="text-align: center;">附近驾校的樱花季，我在这里学车。</div>
+
 <div class="picture-container">
     <img src="around_home/5.JPG" class="picture">
 </div>
 <div style="text-align: center;">驾校附近的河流。</div>
 
 <div class="picture-container">
+    <img src="saijo/201904saijo_sakura/4.JPG" class="picture">
+</div>
+<div style="text-align: center;">不知道哪里的樱花</div>
+
+<div class="picture-container">
+    <img src="saijo/201904saijo_sakura/5.JPG" class="picture">
+</div>
+<div style="text-align: center;">不知道哪里的樱花</div>
+
+<div class="picture-container">
+    <img src="saijo/201904saijo_sakura/6.JPG" class="picture">
+</div>
+<div style="text-align: center;">某个小学的樱花</div>
+
+
+<div class="picture-container">
+    <img src="around_home/23.JPG" class="picture">
+</div>
+
+<div style="text-align: center;">挨着图书馆的古坟ミツ城古墳。一会儿带你们看夜景。（我都忘了为啥我雪天回来这里，可能是我刻意来拍雪景的。）</div>
+
+<div class="picture-container">
+    <img src="saijo/11.JPG" class="picture">
+</div>
+
+<div style="text-align: center;">下雪天时街景。</div>
+<div class="picture-container">
+    <img src="saijo/12.JPG" class="picture">
+</div>
+
+<div style="text-align: center;"></div>
+
+<div class="picture-container">
+    <img src="saijo/10.JPG" class="picture">
+</div>
+
+<div style="text-align: center;">市役所，刚来的时候这里周五还有自助餐，好像1500。日本很贴心，很多地方冬天都提供毛毯(日本人喜欢用来改大腿)，这里也有，还提供不同度数的老花镜方便人填表格。 </div>
+
+
+<div class="picture-container">
     <img src="around_home/21.JPG" class="picture">
 </div>
-<div style="text-align: center;">离家最近的药妆店/小超市。这里有药品还有少量蔬果，肉类，各种冷冻食品饮料等，价格比超市便宜。</div>
+
+<div style="text-align: center;">离家最近的药妆店/小超市コスモス。这里有药品还有少量蔬果，肉类，各种冷冻食品饮料等，价格比超市便宜。</div>
 <div class="picture-container">
     <img src="around_home/22.JPG" class="picture">
 </div>
